--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Shuiotworkshop2015 : ">
+    <meta name="description" content="2015 SHU IOT Workshop : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Shuiotworkshop2015</title>
+    <title>2015 SHU IOT Workshop</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/silencecork/ShuIOTWorkshop2015">View on GitHub</a>
 
-          <h1 id="project_title">Shuiotworkshop2015</h1>
+          <h1 id="project_title">2015 SHU IOT Workshop</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -32,43 +32,75 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="歡迎來到世新大學2015-iot教學課程" class="anchor" href="#%E6%AD%A1%E8%BF%8E%E4%BE%86%E5%88%B0%E4%B8%96%E6%96%B0%E5%A4%A7%E5%AD%B82015-iot%E6%95%99%E5%AD%B8%E8%AA%B2%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>歡迎來到世新大學2015 IOT教學課程</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>本次課程內容主要是在</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<ul>
+<li>基本的Android教學</li>
+<li>Android與Arduino間的藍芽連線</li>
+<li>API Server的建置</li>
+<li>Arduino與Server間的溝通</li>
+<li>Android的資料呈現。本次課程需要您先觀看過去年的教學影片。
+<br><br>本次課程教材與範例使用github進行管理，位址為<a href="https://github.com/silencecork/ShuIOTWorkshop2015.git">https://github.com/silencecork/ShuIOTWorkshop2015.git</a>，若您熟知git與指令模式，可使用以下指令直接取得本次課程相關的專案程式碼與講義</li>
+</ul>
+
+<pre><code>$ mkdir ShuIOTWorkshop2015
+$ cd ShuIOTWorkshop2015
+$ git clone https://github.com/silencecork/ShuIOTWorkshop2015.git
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>也可以使用以下指令更新教材至最新版</p>
+
+<pre><code>$ cd workshop2015
+$ git pull
+</code></pre>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="線上講義" class="anchor" href="#%E7%B7%9A%E4%B8%8A%E8%AC%9B%E7%BE%A9" aria-hidden="true"><span class="octicon octicon-link"></span></a>線上講義</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>您可以藉由下方兩個連結觀看線上講義
+<br><a href="https://drive.google.com/file/d/0B4k6spy68e61ODgzTk5tT1BES0E/view?usp=sharing">如何從Github取得上課教材</a>
+<br><a href="https://drive.google.com/file/d/0B4k6spy68e61VzBCcHRiOUdiWXM/view?usp=sharing">Android基本教學</a>
+<br><a href="https://drive.google.com/file/d/0B4k6spy68e61R2l6WGE4aXQyc2s/view?usp=sharing">藍芽連線</a>
+<br><a href="https://drive.google.com/file/d/0B4k6spy68e61eTdfVWNCMGg2TG8/view?usp=sharing">平台整合</a></p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="課程說明" class="anchor" href="#%E8%AA%B2%E7%A8%8B%E8%AA%AA%E6%98%8E" aria-hidden="true"><span class="octicon octicon-link"></span></a>課程說明</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>第一部份會介紹要製作本次課程範例所需要使用到的Android技術
+<br><br>第二部分會說明如何使用Arduino與藍芽晶片HC-05，且Android如何使用藍芽與Arduino互相溝通
+<br><br>第三部分會說明如何使用Arduino Leonardo與原廠Wifi Shield，搭配溫度感應器LM-35，將溫度藉由呼叫API傳至Server。而Server使用Node.js並架設於PAAS的平台Heroku之上，Server的資料庫部分使用MongoLab。且Android手機呼叫Server API取得溫度變化數值，並藉由MPAndroidChart Library以折線圖的方式呈現資料</p>
+
+<h3>
+<a id="事前準備" class="anchor" href="#%E4%BA%8B%E5%89%8D%E6%BA%96%E5%82%99" aria-hidden="true"><span class="octicon octicon-link"></span></a>事前準備</h3>
+
+<p>本次課程會使用到的工具如下：
+<br><a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">JDK</a>
+<br><a href="https://eclipse.org/downloads/">Eclipse</a> (不是Android Studio)
+<br><a href="https://dl-ssl.google.com/android/eclipse/">ADT</a>
+<br><a href="https://nodejs.org/">Node.js</a>
+<br><a href="http://www.arduino.cc/en/Main/Software">Arduino</a></p>
+
+<h3>
+<a id="使用到第三方函式庫" class="anchor" href="#%E4%BD%BF%E7%94%A8%E5%88%B0%E7%AC%AC%E4%B8%89%E6%96%B9%E5%87%BD%E5%BC%8F%E5%BA%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a>使用到第三方函式庫</h3>
+
+<p>本課程中會使用到兩個Open Source的函式庫
+<br><a href="https://android.googlesource.com/platform/frameworks/volley">Volley</a>
+<br><a href="https://github.com/silencecork/ShuIOTWorkshop2015/raw/master/library/bluetoothUtility.jar">BluetoothUtility</a>
+<br><a href="https://github.com/PhilJay/MPAndroidChart/releases">MPAndroidChart</a></p>
+
+<h3>
+<a id="支援與協助" class="anchor" href="#%E6%94%AF%E6%8F%B4%E8%88%87%E5%8D%94%E5%8A%A9" aria-hidden="true"><span class="octicon octicon-link"></span></a>支援與協助</h3>
+
+<p>有任何疑問，可以來信<a href="mailto:justin@silencecork.com">justin@silencecork.com</a></p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Shuiotworkshop2015 maintained by <a href="https://github.com/silencecork">silencecork</a></p>
+        <p class="copyright">2015 SHU IOT Workshop maintained by <a href="https://github.com/silencecork">silencecork</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
