--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a id="歡迎來到世新大學2015-iot教學課程" class="anchor" href="#%E6%AD%A1%E8%BF%8E%E4%BE%86%E5%88%B0%E4%B8%96%E6%96%B0%E5%A4%A7%E5%AD%B82015-iot%E6%95%99%E5%AD%B8%E8%AA%B2%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>歡迎來到世新大學2015 IOT教學課程</h3>
 
-<p>本次課程內容主要是在</p>
+<p>本次課程內容主要介紹以下幾個項目</p>
 
 <ul>
 <li>基本的Android教學</li>
