Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ $ git pull
 <h3>
 <a id="使用平台" class="anchor" href="#%E4%BD%BF%E7%94%A8%E5%B9%B3%E5%8F%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a>使用平台</h3>
 
-<p><a href="https://www.heroku.com/">Heroku</a>
+<p>本課程中會使用到兩個公開平台
+<br><a href="https://www.heroku.com/">Heroku</a>
 <br><a href="https://mongolab.com/">Eclipse</a></p>
 
 <h3>
