Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ $ git pull
 
 <p>本課程中會使用到兩個公開平台
 <br><a href="https://www.heroku.com/">Heroku</a>
-<br><a href="https://mongolab.com/">Eclipse</a></p>
+<br><a href="https://mongolab.com/">MongoLab</a></p>
 
 <h3>
 <a id="支援與協助" class="anchor" href="#%E6%94%AF%E6%8F%B4%E8%88%87%E5%8D%94%E5%8A%A9" aria-hidden="true"><span class="octicon octicon-link"></span></a>支援與協助</h3>
