Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ $ git pull
 <br><a href="https://drive.google.com/file/d/0B4k6spy68e61MEVhTC1hRFY2MW8/view?usp=sharing">如何從Github取得上課教材</a>
 <br><a href="https://drive.google.com/file/d/0B4k6spy68e61VzBCcHRiOUdiWXM/view?usp=sharing">Android基本教學</a>
 <br><a href="https://drive.google.com/file/d/0B4k6spy68e61R2l6WGE4aXQyc2s/view?usp=sharing">藍芽連線</a>
+<br><a href="https://drive.google.com/file/d/0B4k6spy68e61dU5ybDBBdlFfXzg/view?usp=sharing">設定HC-05進入AT Command模式</a>
 <br><a href="https://drive.google.com/file/d/0B4k6spy68e61eTdfVWNCMGg2TG8/view?usp=sharing">平台整合</a></p>
 
 <h3>
