let page be updated automatically

--- a/network/server/public/index.htm
+++ b/network/server/public/index.htm
@@ -64,7 +64,7 @@
                                     data: valueAry
                                 }]
                             });
-                            //setTimeout(__charts, 10000);
+                            setTimeout(__charts, 5000);
                         }
                     },
                     error: function (xhr, textStatus, errorThrown) {
