--- a/network/server/public/index.htm
+++ b/network/server/public/index.htm
@@ -6,72 +6,77 @@
 
 		<script type="text/javascript" src="http://libs.useso.com/js/jquery/1.8.2/jquery.min.js"></script>
         <script type="text/javascript">
-            var api = 'http://example-tempature-api-server.herokuapp.com/api/queryDataPoint?limit=10';
-            //var api = 'http://localhost:5000/api/queryDataPoint?limit=10'
-            $(document).ready(function () {
-                $.ajax({
-                    url: api,
-                    type: 'GET',
-                    dataType: 'json',
-                    success: function (response, textStatus, xhr) {
-                        console.log('success');
-                        var categoriesAry = [];
-                        var valueAry = [];
-                        for (var i in response) {
-                            var record = response[i];
-                            categoriesAry.push(record.time + '');
-                            valueAry.push(parseFloat(record.value));
-                        }
+
+            function createCharts() {
+                var api = 'http://example-tempature-api-server.herokuapp.com/api/queryDataPoint?limit=10';
+                //var api = 'http://localhost:5000/api/queryDataPoint?limit=10'
+                $(document).ready(function () {
+                    $.ajax({
+                        url: api,
+                        type: 'GET',
+                        dataType: 'json',
+                        success: function (response, textStatus, xhr) {
+                            console.log('success');
+                            var categoriesAry = [];
+                            var valueAry = [];
+                            for (var i in response) {
+                                var record = response[i];
+                                categoriesAry.push(record.time + '');
+                                valueAry.push(parseFloat(record.value));
+                            }
 
 
-                        $(__charts);
+                            $(__charts);
 
-                        function __charts() {
-                            console.log('call charts');
-                            $('#container').highcharts({
-                                title: {
-                                    text: 'DHT-11 Temperature History',
-                                    x: -20 //center
-                                },
-                                subtitle: {
-                                    text: 'Source: DHT-11 Sensor',
-                                    x: -20
-                                },
-                                xAxis: {
-                                    categories: categoriesAry
-                                },
-                                yAxis: {
+                            function __charts() {
+                                console.log('call charts');
+                                $('#container').highcharts({
                                     title: {
-                                        text: 'Temperature (°C)'
+                                        text: 'DHT-11 Temperature History',
+                                        x: -20 //center
                                     },
-                                    plotLines: [{
-                                        value: 0,
-                                        width: 1,
-                                        color: '#808080'
+                                    subtitle: {
+                                        text: 'Source: DHT-11 Sensor',
+                                        x: -20
+                                    },
+                                    xAxis: {
+                                        categories: categoriesAry
+                                    },
+                                    yAxis: {
+                                        title: {
+                                            text: 'Temperature (°C)'
+                                        },
+                                        plotLines: [{
+                                            value: 0,
+                                            width: 1,
+                                            color: '#808080'
+                                        }]
+                                    },
+                                    tooltip: {
+                                        valueSuffix: '°C'
+                                    },
+                                    legend: {
+                                        layout: 'vertical',
+                                        align: 'right',
+                                        verticalAlign: 'middle',
+                                        borderWidth: 0
+                                    },
+                                    series: [{
+                                        name: 'DHT-11',
+                                        data: valueAry
                                     }]
-                                },
-                                tooltip: {
-                                    valueSuffix: '°C'
-                                },
-                                legend: {
-                                    layout: 'vertical',
-                                    align: 'right',
-                                    verticalAlign: 'middle',
-                                    borderWidth: 0
-                                },
-                                series: [{
-                                    name: 'DHT-11',
-                                    data: valueAry
-                                }]
-                            });
-                            setTimeout(__charts, 5000);
+                                });
+                                setTimeout(createCharts, 5000);
+                            }
+                        },
+                        error: function (xhr, textStatus, errorThrown) {
+                            console.log('Error in Database');
                         }
-                    },
-                    error: function (xhr, textStatus, errorThrown) {
-                        console.log('Error in Database');
-                    }
+                    });
                 });
-            });
+            }
+            createCharts();
+            
         </script>
 	</head>
 	<body>
